--- a/assets/css/allah.css
+++ b/assets/css/allah.css
@@ -9,6 +9,36 @@
 margin-top: 15%;
 }
 
+/* #videobcg {
+  position:fixed;
+  z-index: -1;
+  top: -10px;
+  left: -425px;
+  min-width: 150%;
+  min-height: 150%;
+}
+@media (min-aspect-ratio: 16/9) {
+  #videoBG {
+      width:100%;
+      height: auto;
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  #videoBG { 
+      width:auto;
+      height: 100%;
+  }
+}
+@media (max-width: 767px) {
+  #videoBG {
+      display: none;
+  }
+  body {
+      background: url('poster.jpg');
+      background-size: cover;
+  }
+} */
+
 #videobcg {
   position: absolute;
   top: -10px;
@@ -17,7 +47,7 @@ margin-top: 15%;
   min-height: 150%;
   width: auto;
   height: auto;
-  z-index: -1000;
+  z-index: -100000;
   overflow: hidden;
   -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
