--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -421,7 +421,7 @@
 				transform: translate3d(0,0,0);
 				display: inline-block;
 				height: 5.35em;
-				line-height: 5.885em;
+				line-height: 2.885em;
 				opacity: 0;
 				position: relative;
 				top: 0;
@@ -527,17 +527,18 @@
 				}
 
 				#header nav a:hover {
-					transform: scale(1.2);
+					transform: scale(1.15);
 					/* filter: blur(2.5px); */
 				}
 
 					#header nav a:hover:before {
 						background-color: #3f0088;
+						border: solid 1px #3f0088;
 						color: #fff;
 					}
 
 				#header nav a:active {
-					transform: scale(1.1);
+					transform: scale(1.05);
 					background: none;
 				}
 
