--- a/projects/assets/css/allah.css
+++ b/projects/assets/css/allah.css
@@ -51,7 +51,8 @@ figure.snip1205 * {
   transition: all 0.35s ease-in-out;
 }
 figure.snip1205 img {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
   vertical-align: top;
 }
 figure.snip1205 i {
@@ -83,6 +84,7 @@ figure.snip1205.hover img {
 }
 figure.snip1205:hover i,
 figure.snip1205.hover i {
+  top: 43%;
   -webkit-transform: translate(-50%, -50%) scale(1);
   transform: translate(-50%, -50%) scale(1);
   transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -96,7 +98,7 @@ box ding
 */
 
 #first {
-  float:left;
+  float: left;
   margin-left: 17rem;
   margin-bottom: 25px;
 }
@@ -114,4 +116,84 @@ box ding
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   margin-top: 55px;
+}
+
+@media (max-width: 1822px) {
+  #first {
+    float: left;
+    margin-left: auto;
+    margin-bottom: 25px;
+  }
+  #second {
+    float: right;
+    margin-right: auto;
+    margin-bottom: 25px;
+  }
+} 
+
+@media (max-width: 1445px) {
+  #first {
+    float: left;
+    margin-left: auto;
+    margin-bottom: 25px;
+    width: 48%;
+  }
+  #second {
+    float: right;
+    margin-right: auto;
+    margin-bottom: 25px;
+    width: 48%;
+  }
+} 
+
+@media (max-width: 659px) {
+  #first {
+    display: grid;
+    float: none;
+    margin: auto;
+    margin-bottom: 15px;
+    width: 69%;
+  }
+  #second {
+    display: grid;
+    float: none;
+    margin: auto;
+    width: 69%;
+    margin-bottom: 15px;
+  }
+  figure.snip1205 {
+    margin: auto;
+    width: 69%;
+  }
+}
+
+@media (max-width: 531px) {
+  #first {
+    display: grid;
+    float: none;
+    margin: auto;
+    margin-bottom: 15px;
+    width: 88%;
+  }
+  #second {
+    display: grid;
+    float: none;
+    margin: auto;
+    width: 88%;
+    margin-bottom: 15px;
+  }
+  figure.snip1205 {
+    margin: auto;
+    width: 88%;
+  }
+}
+
+.pjct {
+  font-size: 6.9rem
+}
+
+@media (max-width: 388px) {
+  .pjct {
+    font-size: 4.20rem
+  }
 }
