--- a/projects/assets/css/main.css
+++ b/projects/assets/css/main.css
@@ -202,7 +202,7 @@
 		height: 100%;
 		left: 0;
 		opacity: 0;
-		position: fixed;
+		position: relative;
 		top: 0;
 		width: 100%;
 	}
@@ -212,7 +212,7 @@
 	#main {
 		height: 100%;
 		left: 0;
-		position: fixed;
+		position: relative;
 		text-align: center;
 		top: 0;
 		width: 100%;
