--- a/assets/css/allah.css
+++ b/assets/css/allah.css
@@ -291,3 +291,12 @@ i.fa-step-backward {
 .outubyx:hover {
   cursor: pointer;
 }
+
+.contactding {
+  color: #b19cff; 
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+.contactding:hover {
+  color: #8867ff;
+}
