--- a/assets/css/allah.css
+++ b/assets/css/allah.css
@@ -6,94 +6,28 @@
 
 
 .centered {
-margin-top: 15%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
 }
 
-@media (max-width: 1000px) {
-  .centered {
-    margin-top: 20%;
-  }
-}
-
-@media (max-width: 750px) {
-  .centered {
-    margin-top: 30%;
-  }
-}
-
-@media (max-width: 650px) {
-  .centered {
-    margin-top: 43%;
-  }
-}
-
-@media (max-width: 540px) and (max-height: 720px) {
-  .centered {
-    margin-top: 38%;
-  }
-}
-
-@media (max-width: 450px) {
-  .centered {
-    margin-top: 48%;
-  }
-}
-
-@media (max-width: 350px) {
-  .centered {
-    margin-top: 69%;
-  }
-}
-
-
-/* #videobcg {
-  position:fixed;
-  z-index: -1;
-  top: -10px;
-  left: -425px;
-  min-width: 150%;
-  min-height: 150%;
-}
-@media (min-aspect-ratio: 16/9) {
-  #videobcg {
-      width:100%;
-      height: auto;
-  }
-}
-@media (max-aspect-ratio: 16/9) {
-  #videobcg { 
-      width:auto;
-      height: 100%;
-  }
-}
-@media (max-width: 1081px) {
-  #videobcg {
-    width:auto;
-    height: 200%;
-    left: -1175px;
-    top: -100px;
-  }
-} */
-
-/* @media (max-width: 767px) {
-  #videobcg {
-    width:auto;
-    height: 200%;
-  }
-  body {
-      background: url('poster.jpg');
-      background-size: cover;
-  }
-} */
 
 #videobcg {
-  position: absolute;
+  /* position: absolute;
   top: -10px;
   left: -425px;
   min-width: 150%;
   min-height: 150%;
   width: auto;
-  height: auto;
+  height: auto; */
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: -250px;
+  left: -475px;
+  min-width: 150%; 
+  min-height: 150%;
   z-index: -100000;
   overflow: hidden;
   -webkit-filter: blur(5px);
