--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,17 @@ h1, p, span, a, li {
     }
 }
 
+#footer {
+    opacity: 0.5;
+    padding-bottom: 5px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+
 
 
 .modal__img {max-width:60%;height:auto;display:block;}
