--- a/css/main.css
+++ b/css/main.css
@@ -265,6 +265,11 @@ h1, p, span, a, li {
     width: 100%;
 }
 
+.cockni {
+    text-align: center;
+    width: 100%;
+}
+
 
 
 
@@ -278,7 +283,6 @@ h1, p, span, a, li {
     background-color: rgba(0,0,0,0.3);
     left:50%;
     transform: translate(-50%,-50%);
-    /* outuby <3 */
     border-radius: 5px;
     background:#000000e3;
     display: none;
@@ -291,8 +295,7 @@ h1, p, span, a, li {
 #close {cursor:pointer;color:white;position:absolute;top:0;font-size:25px;right:0;padding:1rem;margin-right: 10px;}
 .modal__title{font-size: 2.5rem;}
 .modal__title span{display: block;font-weight: 400;}
-.modal__paragraph{font-size: 16px;font-weight:
-    /* outuby <3 */400;}
+.modal__paragraph{font-size: 16px;font-weight:400;}
 .modal__button:hover{background-color:#0a9372;}
 main{text-align: center;}
 .modal__container{
@@ -301,7 +304,6 @@ main{text-align: center;}
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* outuby <3 */
     position: relative;
 }
 
@@ -313,7 +315,6 @@ main{text-align: center;}
     }
     .modal__img{max-width:50%}
 }
-/* outuby <3 */
 
 @media only screen and (max-width: 500px){
     .modal__title {
@@ -321,3 +322,30 @@ main{text-align: center;}
     }
     .modal__img{max-width:80%}
 }
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    padding: 10px;
+    backdrop-filter: blur(10px);
+}
+
+.carousel-caption p{
+    font-size: 15px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: none;
+    color: #fff;
+    text-shadow: 0 0 10px #000;
+}
+
+.carousel-caption a{
+    color: #ffffff;
+    text-decoration: none;
+    transition: .15s ease-in-out;
+}
+.carousel-caption a:hover{
+    color: #8666ff;
+    text-decoration: none;
+}
+
