--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,12 @@ main{text-align: center;}
     border-radius: 10px;
     padding: 10px;
     backdrop-filter: blur(10px);
+    opacity: 0;
+    transition: opacity 0.420s ease-in-out;
+}
+
+.carousel-caption:hover {
+    opacity: 1;
 }
 
 .carousel-caption p{
@@ -349,3 +355,16 @@ main{text-align: center;}
     text-decoration: none;
 }
 
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
