--- a/css/test.css
+++ b/css/test.css
@@ -1,12 +1,77 @@
-@media only screen and (max-width: 478px) {
-    body {
-        overflow: hidden;
+/*@media only screen and (max-width: 478px) {*/
+/*    body {*/
+/*        overflow: hidden;*/
+/*    }*/
+/*}*/
+
+/*@media only screen and (max-width: 365px) {*/
+/*    .ubschr h1 {*/
+/*        font-size: 4.2rem;*/
+/*    }*/
+/*}*/
+
+
+
+#popupSM {
+    position: fixed;
+    top: 0;
+    width: 23em;
+    height: 3.75em;
+    background-color: #222;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+    display: none;
+    opacity: 0;
+    left: 50%;
+    margin-left: -11.5em;
+    z-index: 9999;
+    animation: slide-down 5s cubic-bezier(0.16, 0.89, 0.49, 0.97);
+    border-radius: 20px;
+    transition: .2s ease-in-out;
+}
+
+#popup-messageSM {
+    text-transform: none;
+    text-align: center;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    backdrop-filter: brightness(.69) blur(3px);
+    padding-top: 0.5em;
+    padding-bottom: 0.75em;
+    border-radius: 20px;
+    transform: translateY(-0.4em);
+    transition: .2s ease-in-out;
+}
+
+
+
+@keyframes slide-down {
+    0% {
+        transform: translateY(-100%);
+        opacity: 1;
+    }
+    25% {
+        transform: translateY(10px);
+        opacity: 1;
+    }
+    75% {
+        transform: translateY(10px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100%);
+        opacity: 0;
+        display: none;
     }
 }
 
-@media only screen and (max-width: 365px) {
-    .ubschr h1 {
-        font-size: 4.2rem;
+@media only screen and (max-width: 380px) {
+    #popup-messageSM {
+        font-size: 1rem;
+        transform: translateY(0);
+    }
+    #popupSM {
+        width: 18em;
+        margin-left: -9em;
     }
 }
-
