--- a/css/test.css
+++ b/css/test.css
@@ -25,7 +25,7 @@
     left: 50%;
     margin-left: -11.5em;
     z-index: 9999;
-    animation: slide-down 5s cubic-bezier(0.16, 0.89, 0.49, 0.97);
+    animation: slide-down 55s cubic-bezier(0.16, 0.89, 0.49, 0.97);
     border-radius: 20px;
     transition: .2s ease-in-out;
 }
@@ -65,10 +65,21 @@
     }
 }
 
+@media only screen and (max-width: 415px) {
+    #popup-messageSM {
+        font-size: 1rem;
+        transform: translateY(5px);
+    }
+    #popupSM {
+        width: 18em;
+        margin-left: -9em;
+    }
+}
+
 @media only screen and (max-width: 380px) {
     #popup-messageSM {
         font-size: 1rem;
-        transform: translateY(0);
+        transform: translateY(0px);
     }
     #popupSM {
         width: 18em;
