phone performance fix (kinda)

--- a/tired-client-de/yup.css
+++ b/tired-client-de/yup.css
@@ -3,12 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    width: auto;
+    height: auto;
+    transform: translateY(-50px) !important;
 }
 
 @media only screen and (max-width: 742px) {
     .wrap {
-        width: auto;
-        height: auto;
         transform: translateX(0px);
     }
 }
