--- a/css/main.css
+++ b/css/main.css
@@ -175,9 +175,7 @@ h1, p, span, a, li {
     cursor: pointer;
 }
 
-
-
-#myVideo {
+#BGVideo {
     position: fixed;
     right: 0;
     bottom: 0;
@@ -790,4 +788,16 @@ button:active {
     opacity: 1;
     visibility: visible;
     transition: opacity 0.3s;
+}
+
+#BGImagePhone {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This ensures the image covers the entire container without distortion */
+    z-index: -2; /* Make sure the image is behind other content */
+    filter: blur(.01rem);
+    -webkit-filter: blur(.01rem);
 }
